# wali

./: .gitignore  README.md  pyproject.toml
wali/: __init__.py  cli.py  wali.py
