[tool.poetry]
name = "wali"
version = "0.1.0"
description = "Wallpaper switcher"
authors = ["Keith Hughitt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
haishoku = "^1.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wali = "wali.cli:run"
